--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^6.15.0",
+    "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "prisma": "^6.15.0",
+    "typescript": "^5"
   }
 }
